[UPD] more views ready
